Commit of Salesforce metadata by Gearset

--- a/unpackaged/main/default/classes/WS_ClientKPI.cls
+++ b/unpackaged/main/default/classes/WS_ClientKPI.cls
@@ -18,24 +18,27 @@ global with sharing class WS_ClientKPI {
         System.debug('*** jsonMaps ***:  '+jsonMaps.get('Client__c'));
         
         //Serialization account, client source/address
-        String clientSourceContent = JSON.serialize(jsonMaps.get('client_Sources'));
+        String clientSourceContent = jsonMaps.containsKey('client_Sources')?JSON.serialize(jsonMaps.get('client_Sources')):null;
         System.debug('*** accountContent clientSourceContent ***:  '+clientSourceContent);
-        String clientAddressesContent = JSON.serialize(jsonMaps.get('client_Adresses'));
+        String clientAddressesContent = jsonMaps.containsKey('client_Adresses')?JSON.serialize(jsonMaps.get('client_Adresses')) : null;
         String accountContent = JSON.serialize(jsonMaps.get('client'));
         System.debug('*** accountContent ***:  '+accountContent);
-        
-        //Parse objects: account, client source/address
-        List<ClientSource__c> clientSourceList = (List<ClientSource__c>)JSON.deserialize(clientSourceContent, List<ClientSource__c>.class);
-        List<ClientAddress__c> clientAddressList = (List<ClientAddress__c>)JSON.deserialize(clientAddressesContent, List<ClientAddress__c>.class);
-        Account accToBeUpdated = (Account)JSON.deserialize(accountContent, Account.class);
-        System.debug('*** clientSourceList ***:  '+clientSourceList[0].SourceLastUpdateDate__c);
+        String response = '';
         String ClientID = (String)jsonMaps.get('Client__c');
-        
+        //Parse objects: account, client source/address
+        if(clientSourceContent!=null) {
+        	List<ClientSource__c> clientSourceList = (List<ClientSource__c>)JSON.deserialize(clientSourceContent, List<ClientSource__c>.class);
+            Database.SaveResult[] sourceResponse = !clientSourceList.isEmpty()?WS_ClientKPIUTL.upsertClientSources(clientSourceList, ClientID):null;
+            response += JSON.serialize(sourceResponse);
+        }
+        if(clientAddressesContent!=null) {
+        	List<ClientAddress__c> clientAddressList = (List<ClientAddress__c>)JSON.deserialize(clientAddressesContent, List<ClientAddress__c>.class);
+            Database.SaveResult[] addressResponse = !clientAddressList.isEmpty()?WS_ClientKPIUTL.upsertClientAddresses(clientAddressList, ClientID) : null;
+            response += JSON.serialize(addressResponse);
+        }
+       
+        Account accToBeUpdated = (Account)JSON.deserialize(accountContent, Account.class);        
         WS_ClientKPIUTL.upsertClientDetails(accToBeUpdated);
-        Database.SaveResult[] sourceResponse = !clientSourceList.isEmpty()?WS_ClientKPIUTL.upsertClientSources(clientSourceList, ClientID):null;
-        Database.SaveResult[] addressResponse = !clientAddressList.isEmpty()?WS_ClientKPIUTL.upsertClientAddresses(clientAddressList, ClientID) : null;
-        String response = JSON.serialize(sourceResponse) + JSON.serialize(addressResponse);
-        //String response = JSON.serialize(addressResponse);
         return response;
     }
 }
