--- a/unpackaged/main/default/translations/cs.translation-meta.xml
+++ b/unpackaged/main/default/translations/cs.translation-meta.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <Translations xmlns="http://soap.sforce.com/2006/04/metadata">
     <customApplications>
         <label><!-- B2C CRM Sync --></label>
@@ -565,4 +565,44 @@
             <name>Communication Subscription Consents</name>
         </sections>
     </reportTypes>
+    <flowDefinitions>
+        <flows />
+        <fullName>Client_Address_Manage_UCRInternalID_Field_Value</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows />
+        <fullName>Client_Product_Manage_UCRInternalID_Field_Value</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows />
+        <fullName>Client_Source_Manage_UCRInternalID_Field_Value</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows />
+        <fullName>GCP_KPI_Manage_UCRInternalID_Field_Value</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows />
+        <fullName>Manage_UCRInternalID_Field_Value</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows />
+        <fullName>Note_Manage_UCRInternalID_Field_Value</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows />
+        <fullName>TransactionItem_Manage_UCRInternalID_Field_Value</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows />
+        <fullName>Transaction_Manage_UCRInternalID_Field_Value</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows />
+        <fullName>Transaction_Payement_Manage_UCRInternalID_Field_Value</fullName>
+    </flowDefinitions>
+    <flowDefinitions>
+        <flows />
+        <fullName>User_Store_Manage_UCRInternalID_Field_Value</fullName>
+    </flowDefinitions>
 </Translations>
