--- a/unpackaged/main/default/translations/en_US.translation-meta.xml
+++ b/unpackaged/main/default/translations/en_US.translation-meta.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <Translations xmlns="http://soap.sforce.com/2006/04/metadata">
     <customApplications>
         <label><!-- B2C CRM Sync --></label>
@@ -31,6 +31,10 @@
     <customLabels>
         <label><!-- BL_AppSettings_Instantiation_Error --></label>
         <name>BL_AppSettings_Instantiation_Error</name>
+    </customLabels>
+    <customLabels>
+        <label><!-- CDP Integration User ID --></label>
+        <name>CDPIntegrationUserID</name>
     </customLabels>
     <customLabels>
         <label><!-- Invoice Url Prefix --></label>
