--- a/unpackaged/main/default/classes/SOM_SalesAndPaymentsReportUKSchedule.cls
+++ b/unpackaged/main/default/classes/SOM_SalesAndPaymentsReportUKSchedule.cls
@@ -26,7 +26,7 @@ public with sharing class SOM_SalesAndPaymentsReportUKSchedule Implements Schedu
         List<Report> paymentRep    = [SELECT Id, Name, DeveloperName FROM Report WHERE DeveloperName  = 'Payments_Report_UK_jiM'];
         List<Report> shipmentRep    = [SELECT Id, Name, DeveloperName FROM Report WHERE DeveloperName = 'Shipments_Report_Finance_GB'];
         List<Report> returnOrdersRep    = [SELECT Id, Name, DeveloperName FROM Report WHERE DeveloperName  = 'Return_Orders_Report_Finance_UK_Dvk'];
-        List<Report> refundOrdersRep    = [SELECT Id, Name, DeveloperName FROM Report WHERE DeveloperName  = 'Refunds_Report_UK_R41'];
+        
         
         
         String invoiceReportId = (String)invoiceRep.get(0).get('Id');
@@ -34,7 +34,7 @@ public with sharing class SOM_SalesAndPaymentsReportUKSchedule Implements Schedu
         String paymentReportId = (String)paymentRep.get(0).get('Id');
         String shipmentReportId = (String)shipmentRep.get(0).get('Id');
         String returnOrdersReportId = (String)returnOrdersRep.get(0).get('Id');
-        String refundOrdersReportId = (String)refundOrdersRep.get(0).get('Id');
+        
         
         String urlFilters = '?&pv0=' + previousMonday + '&pv1=' + previousSunday + '&csv=1&exp=1&enc=UTF-8&isdtp=p1';
         
@@ -45,7 +45,7 @@ public with sharing class SOM_SalesAndPaymentsReportUKSchedule Implements Schedu
         Messaging.EmailFileAttachment paymentAttachment    = new Messaging.EmailFileAttachment();
         Messaging.EmailFileAttachment shipmentAttachment    = new Messaging.EmailFileAttachment();
         Messaging.EmailFileAttachment returnOrdersAttachment    = new Messaging.EmailFileAttachment();
-        Messaging.EmailFileAttachment refundOrdersAttachment    = new Messaging.EmailFileAttachment();
+        
         
         
         ApexPages.PageReference invoiceReport;
@@ -53,7 +53,6 @@ public with sharing class SOM_SalesAndPaymentsReportUKSchedule Implements Schedu
         ApexPages.PageReference paymentReport;
         ApexPages.PageReference shipmentReport;
         ApexPages.PageReference returnOrdersReport;
-        ApexPages.PageReference refundOrdersReport;
         
         
         if(!invoiceRep.isEmpty()){
@@ -76,10 +75,6 @@ public with sharing class SOM_SalesAndPaymentsReportUKSchedule Implements Schedu
             returnOrdersReport    = new ApexPages.PageReference('/'+returnOrdersReportId + urlFilters);
             
         }
-        if(!refundOrdersRep.isEmpty()){
-                    refundOrdersReport    = new ApexPages.PageReference('/'+refundOrdersReportId + urlFilters);
-    
-        }
 
         
         Messaging.SingleEmailMessage email = new Messaging.SingleEmailMessage();
@@ -91,7 +86,6 @@ public with sharing class SOM_SalesAndPaymentsReportUKSchedule Implements Schedu
             paymentAttachment.setBody(Blob.valueOf('UnitPayment.Test'));
             shipmentAttachment.setBody(Blob.valueOf('Unitshipment.Test'));
             returnOrdersAttachment.setBody(Blob.valueOf('UnitreturnOrders.Test'));
-            refundOrdersAttachment.setBody(Blob.valueOf('UnitrefundOrders.Test'));
         } 
         else{
             if(!invoiceRep.isEmpty()){
@@ -124,19 +118,13 @@ public with sharing class SOM_SalesAndPaymentsReportUKSchedule Implements Schedu
                 returnOrdersAttachment.setContentType('text/csv');
                 attchs.add(returnOrdersAttachment);
             }
-            if(!refundOrdersRep.isEmpty()){
-                    refundOrdersAttachment.setFileName('Refund Orders Report.csv');
-                    refundOrdersAttachment.setBody(Blob.valueof(refundOrdersReport.getContent().toString()));
-                    refundOrdersAttachment.setContentType('text/csv');
-                    attchs.add(refundOrdersAttachment);
-            }
         } 
         
         email.setFileAttachments(attchs);
         
         String subject ='[SOM] Weekly extraction of payments and sales for ' + reportSetting.Country_List__c;
         email.setSubject(subject);
-        email.setPlainTextBody('Hello,' + '\n\n' +'Find attached Sales, payments, shipments, returns and refunds reports for week starting from '+previousMonday+' to '+previousSunday+' for the country/countries: ' + reportSetting.Countries__c + +'\n\n' + 'Best regards.');
+        email.setPlainTextBody('Hello,' + '\n\n' +'Find attached Sales, payments, shipments and returns reports for week starting from '+previousMonday+' to '+previousSunday+' for the country/countries: ' + reportSetting.Countries__c + +'\n\n' + 'Best regards.');
         email.setOrgWideEmailAddressId(owa.id);
         String[] toAddresses = new list<string>();
         toAddresses.addAll(reportSetting.Distribution_List__c.split(','));
