--- a/unpackaged/main/default/classes/SOM_SalesPaymentsReportUKMonthSchedule.cls
+++ b/unpackaged/main/default/classes/SOM_SalesPaymentsReportUKMonthSchedule.cls
@@ -27,6 +27,7 @@ public with sharing class SOM_SalesPaymentsReportUKMonthSchedule Implements Sche
         List<Report> paymentRep    = [SELECT Id, Name, DeveloperName FROM Report WHERE DeveloperName  = 'Payments_Report_UK_jiM'];
         List<Report> shipmentRep    = [SELECT Id, Name, DeveloperName FROM Report WHERE DeveloperName = 'Shipments_Report_Finance_GB'];
         List<Report> returnOrdersRep    = [SELECT Id, Name, DeveloperName FROM Report WHERE DeveloperName  = 'Return_Orders_Report_Finance_UK_Dvk'];
+        List<Report> refundOrdersRep    = [SELECT Id, Name, DeveloperName FROM Report WHERE DeveloperName  = 'Refunds_Report_UK_R41'];
                     
             
             String invoiceReportId = (String)invoiceRep.get(0).get('Id');
@@ -34,6 +35,8 @@ public with sharing class SOM_SalesPaymentsReportUKMonthSchedule Implements Sche
             String paymentReportId = (String)paymentRep.get(0).get('Id');
             String shipmentReportId = (String)shipmentRep.get(0).get('Id');
             String returnOrdersReportId = (String)returnOrdersRep.get(0).get('Id');
+        	String refundOrdersReportId = (String)refundOrdersRep.get(0).get('Id');
+
 
 
             String urlFilters = '?&pv0=' + firstDay + '&pv1=' + lastDay + '&csv=1&exp=1&enc=UTF-8&isdtp=p1';
@@ -45,6 +48,8 @@ public with sharing class SOM_SalesPaymentsReportUKMonthSchedule Implements Sche
             Messaging.EmailFileAttachment paymentAttachment    = new Messaging.EmailFileAttachment();
             Messaging.EmailFileAttachment shipmentAttachment    = new Messaging.EmailFileAttachment();
             Messaging.EmailFileAttachment returnOrdersAttachment    = new Messaging.EmailFileAttachment();
+        	Messaging.EmailFileAttachment refundOrdersAttachment    = new Messaging.EmailFileAttachment();
+            
             
 
 
@@ -53,6 +58,8 @@ public with sharing class SOM_SalesPaymentsReportUKMonthSchedule Implements Sche
             ApexPages.PageReference paymentReport;
             ApexPages.PageReference shipmentReport;
             ApexPages.PageReference returnOrdersReport;
+        	ApexPages.PageReference refundOrdersReport;
+			
 			
             
             if(!invoiceRep.isEmpty()){
@@ -75,6 +82,10 @@ public with sharing class SOM_SalesPaymentsReportUKMonthSchedule Implements Sche
                     returnOrdersReport    = new ApexPages.PageReference('/'+returnOrdersReportId + urlFilters);
     
                 }
+        	if(!refundOrdersRep.isEmpty()){
+                    refundOrdersReport    = new ApexPages.PageReference('/'+refundOrdersReportId + urlFilters);
+    
+                }
         
 
             Messaging.SingleEmailMessage email = new Messaging.SingleEmailMessage();
@@ -86,6 +97,7 @@ public with sharing class SOM_SalesPaymentsReportUKMonthSchedule Implements Sche
                 paymentAttachment.setBody(Blob.valueOf('UnitPayment.Test'));
                 shipmentAttachment.setBody(Blob.valueOf('Unitshipment.Test'));
                 returnOrdersAttachment.setBody(Blob.valueOf('UnitreturnOrders.Test'));
+                refundOrdersAttachment.setBody(Blob.valueOf('UnitrefundOrders.Test'));
             } 
             else{
                 if(!invoiceRep.isEmpty()){
@@ -118,13 +130,19 @@ public with sharing class SOM_SalesPaymentsReportUKMonthSchedule Implements Sche
                     returnOrdersAttachment.setContentType('text/csv');
                     attchs.add(returnOrdersAttachment);
                 }
+                if(!refundOrdersRep.isEmpty()){
+                    refundOrdersAttachment.setFileName('Refund Orders Report.csv');
+                    refundOrdersAttachment.setBody(Blob.valueof(refundOrdersReport.getContent().toString()));
+                    refundOrdersAttachment.setContentType('text/csv');
+                    attchs.add(refundOrdersAttachment);
+                }
             }
 
             email.setFileAttachments(attchs);
             
             String subject ='[SOM] Monthly extraction of payments and sales for ' + reportSetting.Country_List__c;
             email.setSubject(subject);
-            email.setPlainTextBody('Hello,' + '\n\n' +'Find attached Sales, payments, shipments and returns reports for month starting from '+firstDay+' to '+lastDay+' for the country/countries: ' + reportSetting.Countries__c + +'\n\n' + 'Best regards.');
+            email.setPlainTextBody('Hello,' + '\n\n' +'Find attached Sales, payments, shipments, returns and refunds reports for month starting from '+firstDay+' to '+lastDay+' for the country/countries: ' + reportSetting.Countries__c + +'\n\n' + 'Best regards.');
             email.setOrgWideEmailAddressId(owa.id);
             String[] toAddresses = new list<string>();
             toAddresses.addAll(reportSetting.Distribution_List__c.split(','));
